# naamkaran

./: .buildinfo  .gitignore  CHANGELOG.md  CLAUDE.md  Citation.cff  Dockerfile  LICENSE  Makefile  README.md  README.rst  coverage.xml  genindex.html  gradio_app.py  index.html  objects.inv  pyproject.toml  pytest.ini  readthedocs.yml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: environment.pickle  index.doctree
.github/workflows/: ci.yml  docs.yml  publish.yml  python-package.yml  python-publish.yml
_sources/: index.rst.txt
_static/: documentation_options.js
docs/source/: changelog.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  quickstart.rst  web_interfaces.rst
docs/source/api/: modules.rst  naamkaran.rst
flask/: example_api_client.py  flask_api.py  test_api.py
naamkaran/: __init__.py  generate.py  model.py  naam.py  utils.py
naamkaran/models/: naamkaran.pt  names_vec.joblib
naamkaran/notebooks/: 01_data_prep.ipynb  02_train.ipynb
naamkaran/tests/: __init__.py  test_010_gen_names.py  test_020_model.py
notebooks/: 01_data_prep.ipynb  02_train.ipynb  namegen_lstm.ipynb  namegen_transformer.ipynb
tests/: __init__.py  test_010_gen_names.py  test_020_model.py
