[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[project]
name = "naamkaran"
version = "0.2.0"
description = "Generative model for names."
readme = "README.rst"
license = { text = "MIT" }
authors = [
    {name = "Rajashekar Chintalapati", email = "rajshekar.ch@gmail.com"},
    {name = "Gaurav Sood", email = "gsood07@gmail.com"},
]
keywords = ["generate", "names", "machine-learning", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.8.0,<3.0.0",
    "pandas>=2.2.0",
    "joblib>=1.4.0",
    "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1.29",
    "sphinx-autodoc-typehints>=1.25",
    "sphinx-copybutton>=0.5",
    "myst-parser>=2.0",
]
web = [
    "gradio>=3.0.0",
    "flask>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "ruff>=0.7.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1.29",
    "sphinx-autodoc-typehints>=1.25",
    "sphinx-copybutton>=0.5",
    "myst-parser>=2.0",
]

[project.urls]
Homepage = "https://github.com/appeler/naamkaran"
Documentation = "https://appeler.github.io/naamkaran/"
Repository = "https://github.com/appeler/naamkaran"
Issues = "https://github.com/appeler/naamkaran/issues"

[project.scripts]
generate_names = "naamkaran.generate:main"

[tool.uv.build-backend]
module-name = "naamkaran"
module-root = ""

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "docs",
    ".eggs",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused
"tests/*" = ["S101"]  # use of assert

[tool.ruff.lint.isort]
known-first-party = ["naamkaran"]



# mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=naamkaran",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# Coverage configuration
[tool.coverage.run]
source = ["naamkaran"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
